--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -623,6 +623,7 @@
             color: #27184f;
             padding: 5px 1em;
             border-radius: 5px;
+            text-align: center;
         }
 
         form {
