--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -52,7 +52,7 @@
             <h1>Calls for Entry & Application.</h1>
             <h4>Nigeria 🇳🇬 and South Africa. 🇿🇦</h4>
             <p>Tuition & Registration fee subsidized.
-                @N10,000 per participant</p>
+                @ N10,000 (300 ZAR) per participant</p>
             <a href="/signup">Sign Up</a>
         </div>
         <div class="purpose">
@@ -74,7 +74,7 @@
             <div class="benefits-grid">
                 <div>
                     <h1>Cash Prizes</h1>
-                    <p>More than N30million worth of cash & prizes to be won.</p>
+                    <p>More than N30million (1million ZAR) worth of cash & prizes to be won.</p>
                 </div>
                 <div>
                     <h1>Incubation</h1>
@@ -103,10 +103,20 @@
 
         <footer>
             <div class="querys">
-                <a href="#">let's talk</a>
+                <a href="mailto:godfactor@afrinolly.com">let's talk</a>
             </div>
 
-            <div class="footerlinks">
+            <div class="">
+                <div class="hi">
+                    <h5>Say hi</h5>
+                    <a href="mailto:godfactor@afrinolly.com">godfactor@afrinolly.com</a>
+                    <div>
+                        <a href="whatsapp://send?text=Hi G-FACTOR!&phone=+2347047449886" class="whatsapp_link">
+                            <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" />
+                            <span>+2347047449886</span>
+                        </a>
+                    </div>
+                </div>
                 <div class="hotline">
                     <h5>service hotline</h5>
                     <p>Thelma Amacree</p>
@@ -120,10 +130,6 @@
                 <div class="headquaters">
                     <h5>headquaters</h5>
                     <p>No. 16, Sophie Kuye,Pedro, Lagos.+2347066453516</p>
-                </div>
-                <div class="hi">
-                    <h5>Say hi</h5>
-                    <a href="mailto:info@afrinolly">info@afrinolly</a>
                 </div>
                 <div class="social">
                     <h5>social</h5>
