--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -117,23 +117,23 @@
                         </a>
                     </div>
                 </div>
-                <div class="hotline">
+                <!-- <div class="hotline">
                     <h5>service hotline</h5>
                     <p>Thelma Amacree</p>
                     <a href="mailto:Afrinolly@gmail.com">Afrinolly@gmail.com</a>
-                </div>
-                <div class="pr">
+                </div> -->
+                <!-- <div class="pr">
                     <h5>public relations inquiries</h5>
                     <p>Ayo</p>
                     <a href="mailto:Macleanafrinolly@gmail.com">Afrinolly@gmail.com</a>
-                </div>
-                <div class="headquaters">
+                </div> -->
+                <!-- <div class="headquaters">
                     <h5>headquaters</h5>
                     <p>No. 16, Sophie Kuye,Pedro, Lagos.+2347066453516</p>
-                </div>
+                </div> -->
                 <div class="social">
-                    <h5>social</h5>
-                    <p>You can always find us on social.</p>
+                    <!-- <h5>social</h5>
+                    <p>You can always find us on social.</p> -->
                     <!-- <div class="socials">
                         <img src="" alt="youtube">
                         <img src="" alt="instagram">
