--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -285,7 +285,7 @@
 
     <!-- <div class="footer_social" style="display: none;">
             <div>
-                <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
+                <p><span style="color: #ddd;">&copy; 2021</span> G-FACTOR </p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
@@ -369,7 +369,7 @@
                 },
                 customizations: {
                     title: "<%=audition.auditionName %>",
-                    description: "GhenGhen Live Tution for <%=audition.auditionName %>",
+                    description: "G-FACTOR Live Tution for <%=audition.auditionName %>",
                     logo: "<%=audition.auditionLogo %>",
                 },
             });
