--- a/views/success.ejs
+++ b/views/success.ejs
@@ -359,6 +359,7 @@
         @media screen and (max-width:200px) {
             .CONGRATULATION {
                 grid-template-columns: 150px;
+                height: 50%;
             }
 
             #submitBtn {
